style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
}

button {
    cursor: pointer;
}

section {
    background-color: rgb(245, 245, 245);
    transition: all 300ms ease;
}

p {
    font-size: 1rem;
}

input, textarea {
    width: 100%;
    background-color: #242424;
    color: white;
    outline: none;
    border-bottom: 3px solid #c0c4cc;
    height: 40px;
}

textarea {
    resize: vertical;
    height: 100px;
    margin-top: 8px;
}

label {
    font-size: 14px;
    font-weight: bold;
}

input:hover,
textarea:hover {
    border-color: #dcdfe6;
}
input:focus,
textarea:focus {
    border-color: rgb(35, 175, 35);
}

.container {
    padding: 60px 0;
}

.row {
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 12px;
}

.title {
    font-size: 7rem;
    margin-bottom: 12px;
    text-align: left;
    line-height: 1;
}

.section__title {
    text-align: center;
    font-size: 3rem;
    margin-bottom: 4rem;
}



.click {
    transform: scale(1.1);
    transition: all 300ms;
    cursor: pointer;
}
.click:active {
    transform: scale(0.8);
}

.link__hover-effect {
    position: relative;
}

.link__hover-effect::after {
    content: "";
    position: absolute;
    height: 3px;
    width: 0;
    bottom: -3px;
    right: 0;
    transition: all 300ms ease;
}

.link__hover-effect--black::after {
    background-color: black;
}

.link__hover-effect--white::after {
    background-color: white;
}

.link__hover-effect:hover::after {
    width: 100%;
    left: 0;
}

nav,
.scroll,
header {
    opacity: 1;
    visibility: visible;
    transition: all 600ms 800ms;
}
.modal--open nav,
.modal--open .scroll,
.modal--open header {
    opacity: 0;
    visibility: hidden;
    transition: all 400ms;
}

.dark-theme .title,
.dark-theme .section__title,
.dark-theme .section__sub-title,
.dark-theme .nav__link--anchor,
.dark-theme .header__para {
    color: white;
}

.dark-theme section {
    background-color: #242424;
}
.dark-theme .scroll__icon,
.dark-theme .fa-circle-half-stroke,
.dark-theme .mail__btn,
.dark-theme .link__hover-effect--black::after,
.dark-theme .footer__social--link,
.dark-theme .footer__copyright {
    filter: invert();
}

.text--highlight,
.dark-theme .text--highlight {
    color: rgb(35, 200, 35);
}

/* 

LANDING 

*/
#landing {
    min-height: 100vh;
}
header {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    max-width: 1000px;
    z-index: 2;
}
.header__para {
    font-size: 1.5rem;
    font-weight: 600;
    line-height: 2;
    max-width: 500px;
    z-index: 2;
}

.social__list {
    margin-top: 1rem;
    display: flex;
    z-index: 2;
}
.social__link {
    background-color: rgb(35, 200, 35);
    color: white;
    padding: 6px;
    width: 32px;
    height: 32px;
    font-size: 0.875rem;
    margin-right: 12px;
    border-radius: 99px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.mail__btn {
    position: fixed;
    width: 70px;
    height: 70px;
    font-size: 32px;
    border-radius: 50%;
    border: none;
    background-color: #242424;
    color: white;
    bottom: 32px;
    right: 40px;
    z-index: 1;
}

.scroll {
    position: absolute;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
}
.scroll__icon{
    width: 20px;
    height: 30px;
    border: 2px solid #242424;
    border-radius: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.scroll__icon::after {
    content: "";
    background-color: #242424;
    width: 4px;
    height: 6px;
    border-radius: 2px;
    animation: scroll 1000ms infinite alternate-reverse;
}

@keyframes scroll {
    0% {
        transform: translateY(3px);
    }
    
    100% {
        transform: translateY(-3px);
    }
}

/*

* NAV

*/
#personal-logo {
    width: 100%;
    max-width: 6rem;
    height: 100%;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1280px;
    margin: 0 auto;
    padding: 0 20px;
    height: 100px;
}

.nav__link--list {
    display: flex;
}
.nav__link {
    margin: 0 0.75rem;
}
.nav__link--anchor {
    font-size: 1rem;
    color: #242424;
    font-weight: 700;
}

.fa-circle-half-stroke {
    font-size: 1.125rem;
}

/*

* MODAL

*/
.modal {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
    max-width: 1100px;
    height: 700px;
    border-radius: 20px;
    overflow: hidden;
    display: flex;
    visibility: hidden;
    transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
}
.modal--open .modal {
    z-index: 60;
    box-shadow: 0 20px 80px 0 rgba(0, 0, 0, 0.55);
    visibility: visible;
}

.modal__half {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 50%;
    justify-content: center;
    padding: 40px 72px;
    transition: all 300ms ease-in;
}
.modal__about {
    background-color: rgb(245, 245, 245);
    transform: translateX(-110%);
}
.modal--open .modal__about,
.modal--open .modal__contact {
    transform: translateX(0);
}
.lang__img--wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 25px 16px;
}

.lang {
    position: relative;
    width: 33.33%;
    display: flex;
    justify-content: center;
}

.lang__img {
    width: 100%;
    max-width: 100px;
}

.lang:hover .lang__img {
    filter: brightness(80%);
    opacity: 0.86;
    transform: scale(0.9);
    transition: all 200ms ease-in-out;
}

.lang__list {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
}

.lang__name {
    position: absolute;
    bottom: 0;
    transform: scale(0);
    transition: all 200ms;
    font-size: 1rem;
    opacity: 0;
}

.lang:hover .lang__name {
    transform: scale(1);
    opacity: 1;
}


.modal__contact {
    background-color: #242424;
    color: white;
    transform: translateX(110%);
}
.form__item {
    margin-bottom: 20px;
}
.form__submit {
    background-color: rgb(35, 175, 35);
    border: 2px solid rgb(35, 175, 35);
    color: whitesmoke;
    font-weight: 700;
    font-size: 20px;
    width: 100%;
    max-width: 240px;
    padding: 12px 24px;
    transition: all 300ms;
}
.form__submit:hover {
    border-color: #fff;
    background-color: transparent;
}
.form__submit:active {
    border-color: rgb(35, 175, 35);
    color: rgb(35, 175, 35);
}

.modal__overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: none;
    align-items: center;
    justify-content: center;
    z-index: -1;
}
.modal__overlay--loading {
    background-color: #242424;
    font-size: 80px;
}
.fa-spinner {
    animation: spinner 750ms infinite linear;
}
@keyframes spinner {
    0% {
        transform: rotate(0);
    }    
    100% {
        transform: rotate(360deg);
    }
}

.modal__overlay--success {
    background-color: green;
    font-size: 40px;
    font-weight: 700;
    text-align: center;
    padding: 2rem;
}

.modal__overlay--visible {
    z-index: 1;
    display: flex;
}

.modal__title {
    font-size: 26px;
}
.modal__sub-title {
    font-size: 14px;
    margin: 12px 0 24px 0;
}
.modal__para {
    margin-bottom: 12px;
    line-height: 1.75;
    font-weight: 500;
}

.modal__exit {
    position: absolute;
    top: 30px;
    right: 40px;
    color: white;
    font-size: 36px;
    z-index: 100;
}
/*

* PROJECTS

*/

.project__wrapper {
    position: relative;
    border-radius: 20px;
    box-shadow: 0 20px 80px 0 rgba(0, 0, 0, 0.45);
    overflow: hidden;
    background-color: darkslategray;
}
.project__img {
    width: 100%;
    transition: all 600ms ease;
}
.project:hover .project__img {
    transform: scale(1.07);
    filter: blur(5px);
}
.project__wrapper--bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #1c1d25;
    opacity: 0;
    transition: all 300ms ease;
}
.project:hover .project__wrapper--bg {
    opacity: 0.9
}
.project__description {
    position: absolute;
    top: 50%;
    left: 90px;
    transform: translateY(100%);
    color: white;
    max-width: 550px;
    opacity: 0;
    transition: all 300ms ease;
}
.project:hover .project__description{
    opacity: 1;
    transform: translateY(-50%);
}
.project__description--title {
    font-size: 3rem;
}
.project__description--para {
    margin: 2rem 0;
}
.project__description--link {
    color: white;
    font-size: 20px;
    margin-right: 2rem;
}

/*

* FOOTER

*/

footer {
    background-color: #242424;
    /* display: flex; */
    padding: 6% 0;
}

.footer__row {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer__anchor {
    position: relative;
    margin-bottom: 20px;
}

.footer__anchor:hover .footer__logo--popper{
    transform: translateX(70px);
    opacity: 1;
}

.footer__logo--img {
    width: 70px;
    height: 70px;
}

.footer__logo--popper {
    position: absolute;
    right: 0;
    top: 30px;
    font-weight: 700;
    opacity: 0;
    transition: all 300ms ease;
}

.footer__social--list {
    width: 100%;
    max-width: 500px;
    display: flex;
    justify-content: space-around;
    margin: 28px 0;
}

.footer__social--link,
.footer__copyright,
.footer__logo--popper {
    color: white;
}


/*

SHAPES 

*/
.shape {
    position: fixed;
}
.shape--0 {
    top: 15vh;
    left: 5vw;
}
.shape--1 {
    top: 15vh;
    left: 50vw;
}
.shape--2 {
    top: 15vh;
    left: 80vw;
}
.shape--3 {
    top: 50vh;
    left: 5vw;
}
.shape--4 {
    top: 50vh;
    left: 50vw;
}
.shape--5 {
    top: 50vh;
    left: 80vw;
}
.shape--6 {
    top: 80vh;
    left: 5vw;
}
.shape--7 {
    top: 80vh;
    left: 50vw;
}
.shape--8 {
    top: 80vh;
    left: 80vw;
}

